# ml-language-playground

./: README.md  build.sh  mathematical_foundations.md  requirements.txt
configs/: base.yaml
configs/models/: regression.yaml  sequence.yaml
src/c/: CMakeLists.txt  regression_main.c
src/c/models/regression/: CMakeLists.txt  regression.h  regression_cpu.c
src/python/models/autoencoder/: autoencoder_pytorch.py
src/python/models/clustering/: gmm_numpy.py  kmeans_numpy.py
src/python/models/gp/: gp_numpy.py
src/python/models/hmm/: hmm_numpy.py
src/python/models/pca/: pca_numpy.py
src/python/models/regression/: linear_numpy.py  linear_pytorch.py  quantile_numpy.py
src/python/models/rnn/: gru_pytorch.py  lstm_pytorch.py
src/python/models/tcn/: tcn_pytorch.py
src/python/models/tft/: tft_pytorch.py
src/python/models/transformer/: transformer_pytorch.py
src/python/models/trees/: _tree_core.py  decision_tree_numpy.py  gbm_numpy.py  random_forest_numpy.py
src/python/utils/: data_utils.py  seq_utils.py
src/rust/: Cargo.toml
src/rust/models/regression-cpu/: Cargo.toml
src/rust/models/regression-cpu/src/: main.rs
src/scripts/: extras_benchmark.py
